tests/with_end_port_example_new/pods_list.yaml
apiVersion: v1
items:
    - apiVersion: v1
      kind: Pod
      metadata:
        labels:
            app: skydive
            controller-revision-hash: "1317571478"
            pod-template-generation: "1"
            tier: agent
        name: cog-agents-d54st
        namespace: default
        ownerReferences:
            - apiVersion: extensions/v1beta1
              blockOwnerDeletion: true
              controller: true
              kind: DaemonSet
              name: cog-agents
              uid: 14265cc3-301f-11e8-865c-52075433990e
      spec:
        containers:
            - ports: []
    - apiVersion: v1
      kind: Pod
      metadata:
        labels:
            app: skydive
            controller-revision-hash: "1317571478"
            pod-template-generation: "1"
            tier: agent
        name: cog-agents-js4qc
        namespace: default
        ownerReferences:
            - apiVersion: extensions/v1beta1
              blockOwnerDeletion: true
              controller: true
              kind: DaemonSet
              name: cog-agents
              uid: 14265cc3-301f-11e8-865c-52075433990e
      spec:
        containers:
            - ports: []
    - apiVersion: v1
      kind: Pod
      metadata:
        labels:
            app: skydive
            controller-revision-hash: "1317571478"
            pod-template-generation: "1"
            tier: analyzer
        name: cog-agents-qr8gp
        namespace: default
        ownerReferences:
            - apiVersion: extensions/v1beta1
              blockOwnerDeletion: true
              controller: true
              kind: DaemonSet
              name: cog-agents
              uid: 14265cc3-301f-11e8-865c-52075433990e
      spec:
        containers:
            - ports: []
    - apiVersion: v1
      kind: Pod
      metadata:
        labels:
            app: skydive
            pod-template-hash: "3833961177"
            tier: analyzer
        name: cog-local-analyzer-7d77fb55cc-bs8rc
        namespace: default
        ownerReferences:
            - apiVersion: extensions/v1beta1
              blockOwnerDeletion: true
              controller: true
              kind: ReplicaSet
              name: cog-local-analyzer-7d77fb55cc
              uid: 13c04c1a-301f-11e8-865c-52075433990e
      spec:
        containers:
            - ports: []
    - apiVersion: v1
      kind: Pod
      metadata:
        labels:
            pod-template-hash: "175883757"
            provider-ip: 1-1-1-10
            somehash: a8bba512021e211e8a8d432799206ac6
            weird-lb-app-name: keepalived
        name: barbar-app-r66p2
        namespace: vendor-system
        ownerReferences:
            - apiVersion: extensions/v1beta1
              blockOwnerDeletion: true
              controller: true
              kind: ReplicaSet
              name: barbar-app
              uid: 82429751-7587-11e8-82cc-fe87d4819862
      spec:
        containers:
            - ports: []
    - apiVersion: v1
      kind: Pod
      metadata:
        labels:
            pod-template-hash: "175883757"
            provider-ip: 1-1-1-10
            somehash: a8bba512021e211e8a8d432799206ac6
            weird-lb-app-name: keepalived
        name: barbar-app-zv2ch
        namespace: vendor-system
        ownerReferences:
            - apiVersion: extensions/v1beta1
              blockOwnerDeletion: true
              controller: true
              kind: ReplicaSet
              name: barbar-app
              uid: 82429751-7587-11e8-82cc-fe87d4819862
      spec:
        containers:
            - ports: []
    - apiVersion: v1
      kind: Pod
      metadata:
        labels:
            pod-template-hash: "2800444089"
            provider-ip: 1-1-1-14
            somehash: a25265535216311e8a8d432799206ac6
            weird-lb-app-name: keepalived
        name: foofoo-app-lp6tw
        namespace: vendor-system
        ownerReferences:
            - apiVersion: extensions/v1beta1
              blockOwnerDeletion: true
              controller: true
              kind: ReplicaSet
              name: foofoo-app
              uid: 82392068-7587-11e8-82cc-fe87d4819862
      spec:
        containers:
            - ports: []
    - apiVersion: v1
      kind: Pod
      metadata:
        labels:
            pod-template-hash: "2800444089"
            provider-ip: 1-1-1-14
            somehash: a25265535216311e8a8d432799206ac6
            weird-lb-app-name: keepalived
        name: foofoo-app-vsh47
        namespace: vendor-system
        ownerReferences:
            - apiVersion: extensions/v1beta1
              blockOwnerDeletion: true
              controller: true
              kind: ReplicaSet
              name: foofoo-app
              uid: 82392068-7587-11e8-82cc-fe87d4819862
      spec:
        containers:
            - ports: []
    - apiVersion: v1
      kind: Pod
      metadata:
        labels:
            k8s-app: calico-kube-controllers
            pod-template-hash: "3250224733"
        name: calico-kube-controllers-7694668c77-t6slc
        namespace: kube-system-dummy-to-ignore
        ownerReferences:
            - apiVersion: extensions/v1beta1
              blockOwnerDeletion: true
              controller: true
              kind: ReplicaSet
              name: calico-kube-controllers-7694668c77
              uid: bd0924a5-2134-11e8-a8d4-32799206ac60
      spec:
        containers:
            - ports: []
    - apiVersion: v1
      kind: Pod
      metadata:
        labels:
            controller-revision-hash: "3852388844"
            k8s-app: calico-node
            pod-template-generation: "1"
            tier: frontend
        name: calico-node-mgdlr
        namespace: kube-system
        ownerReferences:
            - apiVersion: extensions/v1beta1
              blockOwnerDeletion: true
              controller: true
              kind: DaemonSet
              name: calico-node
              uid: bd04ac9e-2134-11e8-a8d4-32799206ac60
      spec:
        containers:
            - ports: []
            - ports: []
    - apiVersion: v1
      kind: Pod
      metadata:
        labels:
            controller-revision-hash: "3852388844"
            k8s-app: calico-node
            pod-template-generation: "1"
        name: calico-node-ns8kw
        namespace: kube-system
        ownerReferences:
            - apiVersion: extensions/v1beta1
              blockOwnerDeletion: true
              controller: true
              kind: DaemonSet
              name: calico-node
              uid: bd04ac9e-2134-11e8-a8d4-32799206ac60
      spec:
        containers:
            - ports: []
            - ports: []
    - apiVersion: v1
      kind: Pod
      metadata:
        labels:
            controller-revision-hash: "3852388844"
            k8s-app: calico-node
            pod-template-generation: "1"
        name: calico-node-ptdgj
        namespace: kube-system
        ownerReferences:
            - apiVersion: extensions/v1beta1
              blockOwnerDeletion: true
              controller: true
              kind: DaemonSet
              name: calico-node
              uid: bd04ac9e-2134-11e8-a8d4-32799206ac60
      spec:
        containers:
            - ports: []
            - ports: []
    - apiVersion: v1
      kind: Pod
      metadata:
        labels:
            k8s-app: heapster
            pod-template-hash: "3894764722"
            version: v1.4.3
        name: heapster-7df8cb8c66-zxkk2
        namespace: kube-system
        ownerReferences:
            - apiVersion: extensions/v1beta1
              blockOwnerDeletion: true
              controller: true
              kind: ReplicaSet
              name: heapster-7df8cb8c66
              uid: 97d144ee-2136-11e8-a8d4-32799206ac60
      spec:
        containers:
            - ports: []
            - ports: []
    - apiVersion: v1
      kind: Pod
      metadata:
        labels:
            app: file-plugin
            pod-template-hash: "3696462569"
            tier: frontend
        name: file-plugin-7bfb8b69bf-p86gk
        namespace: kube-system
        ownerReferences:
            - apiVersion: extensions/v1beta1
              blockOwnerDeletion: true
              controller: true
              kind: ReplicaSet
              name: file-plugin-7bfb8b69bf
              uid: dda3a270-53a0-11e8-a909-4e37e9ec47cc
      spec:
        containers:
            - ports: []
    - apiVersion: v1
      kind: Pod
      metadata:
        labels:
            app: keepalived-watcher
            controller-revision-hash: "1304143331"
            pod-template-generation: "3"
            tier: frontend
        name: keepalived-watcher-57ghx
        namespace: kube-system
        ownerReferences:
            - apiVersion: extensions/v1beta1
              blockOwnerDeletion: true
              controller: true
              kind: DaemonSet
              name: keepalived-watcher
              uid: 3254bea7-2135-11e8-a8d4-32799206ac60
      spec:
        containers:
            - ports: []
    - apiVersion: v1
      kind: Pod
      metadata:
        labels:
            app: keepalived-watcher
            controller-revision-hash: "1304143331"
            pod-template-generation: "3"
            tier: frontend
        name: keepalived-watcher-gzdfm
        namespace: kube-system
        ownerReferences:
            - apiVersion: extensions/v1beta1
              blockOwnerDeletion: true
              controller: true
              kind: DaemonSet
              name: keepalived-watcher
              uid: 3254bea7-2135-11e8-a8d4-32799206ac60
      spec:
        containers:
            - ports: []
    - apiVersion: v1
      kind: Pod
      metadata:
        labels:
            app: keepalived-watcher
            controller-revision-hash: "1304143331"
            pod-template-generation: "3"
            tier: not_frontend_for_demo
        name: keepalived-watcher-wczq8
        namespace: kube-system
        ownerReferences:
            - apiVersion: extensions/v1beta1
              blockOwnerDeletion: true
              controller: true
              kind: DaemonSet
              name: keepalived-watcher
              uid: 3254bea7-2135-11e8-a8d4-32799206ac60
      spec:
        containers:
            - ports: []
    - apiVersion: v1
      kind: Pod
      metadata:
        labels:
            app: kube-fluentd
            controller-revision-hash: "2787683658"
            pod-template-generation: "20"
        name: kube-fluentd-2qw2g
        namespace: kube-system
        ownerReferences:
            - apiVersion: extensions/v1beta1
              blockOwnerDeletion: true
              controller: true
              kind: DaemonSet
              name: kube-fluentd
              uid: aa09f313-2162-11e8-a8d4-32799206ac60
      spec:
        containers:
            - ports: []
    - apiVersion: v1
      kind: Pod
      metadata:
        labels:
            app: kube-fluentd
            controller-revision-hash: "2787683658"
            pod-template-generation: "20"
            tier: frontend
        name: kube-fluentd-h6rjg
        namespace: kube-system
        ownerReferences:
            - apiVersion: extensions/v1beta1
              blockOwnerDeletion: true
              controller: true
              kind: DaemonSet
              name: kube-fluentd
              uid: aa09f313-2162-11e8-a8d4-32799206ac60
      spec:
        containers:
            - ports: []
    - apiVersion: v1
      kind: Pod
      metadata:
        labels:
            app: kube-fluentd
            controller-revision-hash: "2787683658"
            pod-template-generation: "20"
        name: kube-fluentd-qmp4w
        namespace: kube-system
        ownerReferences:
            - apiVersion: extensions/v1beta1
              blockOwnerDeletion: true
              controller: true
              kind: DaemonSet
              name: kube-fluentd
              uid: aa09f313-2162-11e8-a8d4-32799206ac60
      spec:
        containers:
            - ports: []
    - apiVersion: v1
      kind: Pod
      metadata:
        labels:
            app: storage-watcher
            pod-template-hash: "4050606466"
            tier: frontend
        name: storage-watcher-8494b4b8bb-f8csd
        namespace: kube-system
        ownerReferences:
            - apiVersion: extensions/v1beta1
              blockOwnerDeletion: true
              controller: true
              kind: ReplicaSet
              name: storage-watcher-8494b4b8bb
              uid: 12bda406-539e-11e8-a909-4e37e9ec47cc
      spec:
        containers:
            - ports: []
    - apiVersion: v1
      kind: Pod
      metadata:
        labels:
            k8s-app: kube-dns
            pod-template-hash: "822693286"
        name: kube-dns-amd64-d66bf76db-9s486
        namespace: kube-system-dummy-to-ignore
        ownerReferences:
            - apiVersion: extensions/v1beta1
              blockOwnerDeletion: true
              controller: true
              kind: ReplicaSet
              name: kube-dns-amd64-d66bf76db
              uid: b6245fc0-7589-11e8-bd75-ce1115ac0d30
      spec:
        containers:
            - ports:
                - containerPort: 10053
                  name: dns-local
                  protocol: UDP
                - containerPort: 10053
                  name: dns-tcp-local
                  protocol: TCP
            - ports:
                - containerPort: 53
                  name: dns
                  protocol: UDP
                - containerPort: 53
                  name: dns-tcp
                  protocol: TCP
            - ports:
                - containerPort: 10054
                  name: metrics
                  protocol: TCP
    - apiVersion: v1
      kind: Pod
      metadata:
        labels:
            k8s-app: kube-dns
            pod-template-hash: "822693286"
        name: kube-dns-amd64-d66bf76db-bbvts
        namespace: kube-system-dummy-to-ignore
        ownerReferences:
            - apiVersion: extensions/v1beta1
              blockOwnerDeletion: true
              controller: true
              kind: ReplicaSet
              name: kube-dns-amd64-d66bf76db
              uid: b6245fc0-7589-11e8-bd75-ce1115ac0d30
      spec:
        containers:
            - ports:
                - containerPort: 10053
                  name: dns-local
                  protocol: UDP
                - containerPort: 10053
                  name: dns-tcp-local
                  protocol: TCP
            - ports:
                - containerPort: 53
                  name: dns
                  protocol: UDP
                - containerPort: 53
                  name: dns-tcp
                  protocol: TCP
            - ports:
                - containerPort: 10054
                  name: metrics
                  protocol: TCP
    - apiVersion: v1
      kind: Pod
      metadata:
        labels:
            k8s-app: kube-dns-autoscaler
            pod-template-hash: "3491986802"
        name: kube-dns-autoscaler-78f5fdbd46-zt2sf
        namespace: kube-system-dummy-to-ignore
        ownerReferences:
            - apiVersion: extensions/v1beta1
              blockOwnerDeletion: true
              controller: true
              kind: ReplicaSet
              name: kube-dns-autoscaler-78f5fdbd46
              uid: 32674c78-2135-11e8-a8d4-32799206ac60
      spec:
        containers:
            - ports: []
    - apiVersion: v1
      kind: Pod
      metadata:
        labels:
            k8s-app: kubernetes-dashboard
            pod-template-hash: "1619541679"
        name: kubernetes-dashboard-5b5f985bcf-cvg7r
        namespace: kube-system-dummy-to-ignore
        ownerReferences:
            - apiVersion: extensions/v1beta1
              blockOwnerDeletion: true
              controller: true
              kind: ReplicaSet
              name: kubernetes-dashboard-5b5f985bcf
              uid: 3392f895-2135-11e8-a8d4-32799206ac60
      spec:
        containers:
            - ports:
                - containerPort: 9090
                  protocol: TCP
    - apiVersion: v1
      kind: Pod
      metadata:
        labels:
            app: public-cre08b89c167414305a1afb205d0bd346f-alb1
            pod-template-hash: "4045640149"
        name: public-cre08b89c167414305a1afb205d0bd346f-alb1-8489b8458f-b9j42
        namespace: kube-system-dummy-to-ignore
        ownerReferences:
            - apiVersion: extensions/v1beta1
              blockOwnerDeletion: true
              controller: true
              kind: ReplicaSet
              name: public-cre08b89c167414305a1afb205d0bd346f-alb1-8489b8458f
              uid: 505e0425-78a5-11e8-bd75-ce1115ac0d30
      spec:
        containers:
            - ports:
                - containerPort: 8080
                  protocol: TCP
            - ports:
                - containerPort: 80
                  protocol: TCP
                - containerPort: 443
                  protocol: TCP
    - apiVersion: v1
      kind: Pod
      metadata:
        labels:
            app: public-cre08b89c167414305a1afb205d0bd346f-alb1
            pod-template-hash: "4045640149"
        name: public-cre08b89c167414305a1afb205d0bd346f-alb1-8489b8458f-hctcv
        namespace: kube-system-dummy-to-ignore
        ownerReferences:
            - apiVersion: extensions/v1beta1
              blockOwnerDeletion: true
              controller: true
              kind: ReplicaSet
              name: public-cre08b89c167414305a1afb205d0bd346f-alb1-8489b8458f
              uid: 505e0425-78a5-11e8-bd75-ce1115ac0d30
      spec:
        containers:
            - ports:
                - containerPort: 8080
                  protocol: TCP
            - ports:
                - containerPort: 80
                  protocol: TCP
                - containerPort: 443
                  protocol: TCP
    - apiVersion: v1
      kind: Pod
      metadata:
        labels:
            app: helm
            name: tiller
            pod-template-hash: "1701755226"
            tier: frontend
        name: tiller-deploy-5c45c9966b-nqwz6
        namespace: kube-system
        ownerReferences:
            - apiVersion: extensions/v1beta1
              blockOwnerDeletion: true
              controller: true
              kind: ReplicaSet
              name: tiller-deploy-5c45c9966b
              uid: 5c5a70db-21e2-11e8-a8d4-32799206ac60
      spec:
        containers:
            - ports:
                - containerPort: 44134
                  name: tiller
                  protocol: TCP
    - apiVersion: v1
      kind: Pod
      metadata:
        labels:
            app: vpn
            kubernetes-dashboard-policy: allow
            pod-template-hash: "4149285333"
            tier: frontend
        name: vpn-858f6d9777-2bw5m
        namespace: kube-system
        ownerReferences:
            - apiVersion: extensions/v1beta1
              blockOwnerDeletion: true
              controller: true
              kind: ReplicaSet
              name: vpn-858f6d9777
              uid: 55520b9b-7589-11e8-bd75-ce1115ac0d30
      spec:
        containers:
            - ports: []
kind: PodList
